# osm-xml

./: Cargo.toml  LICENSE  README.md
src/: elements.rs  error.rs  lib.rs  polygon.rs
tests/: lib.rs  parsing.rs
tests/test_data/: bounds.osm  bounds_invalid_coord.osm  bounds_missing_coord.osm  invalid_nodes.osm  recursive_nodes.osm  relations.osm  two_nodes.osm  way.osm
