[package]
name = "osm-xml"
version = "0.5.0"
authors = ["Iivari Äikäs <iivari.aikas@gmail.com>"]

description = "OSM xml parser for Rust"
homepage = "https://github.com/orva/osm-xml"
readme = "README.md"
keywords = [
  "OpenStreetMap",
  "osm",
  "parser",
  "xml",
]
license = "MIT"

[dependencies]
xml-rs = "0.3"
