[package]
name = "osm-xml"
version = "0.6.2"
authors = ["Iivari Äikäs <iivari.aikas@gmail.com>"]

description = "OSM xml parser for Rust"
homepage = "https://github.com/orva/osm-xml"
readme = "README.md"
keywords = [
  "OpenStreetMap",
  "osm",
  "parser",
  "xml",
]
license = "MIT"

[dependencies]
xml-rs = "0.7"
fnv = "1.0.6"
